# ROS2-Nav2-AI-Planner

./: README.md
docker/: Dockerfile.ros2  docker-compose.yml
rviz/: nav_view.rviz
src/nav_ai/: package.xml  setup.cfg  setup.py
src/nav_ai/launch/: ai_planner.launch.py
src/nav_ai/nav_ai/: ai_planner_node.py
src/nav_launch/launch/: bringup.launch.py
src/slam_launch/launch/: slam_toolbox.launch.py
worlds/: factory.world
